--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "date-diff",
   "main": "date-diff.js",
   "description": "DateDiff is a minimalized Javascript date arithmetic extension.",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "keywords": [
     "DateDiff",
     "Date diff",
@@ -18,22 +18,25 @@
   "author": "Melvin Sembrano <melvinsembrano@gmail.com> (https://github.com/melvinsembrano/date-diff)",
   "license": "MIT",
   "devDependencies": {
+    "coffeescript": "^2.2.3",
     "easy-date": "^1.0.0",
-    "grunt": "^0.4.5",
-    "grunt-bump": "^0.6.0",
-    "grunt-contrib-coffee": "^0.13.0",
-    "grunt-contrib-jasmine": "^0.9.2",
-    "grunt-contrib-uglify": "^0.11.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-exec": "^0.4.6",
-    "grunt-karma": "^0.12.1",
-    "jasmine": "^2.4.1",
-    "jasmine-core": "^2.4.0",
-    "karma": "^0.13.15",
-    "karma-jasmine": "^0.3.6",
-    "karma-phantomjs-launcher": "^0.2.1"
+    "grunt": "^1.0.2",
+    "grunt-bump": "^0.8.0",
+    "grunt-contrib-coffee": "^2.0.0",
+    "grunt-contrib-jasmine": "^1.1.0",
+    "grunt-contrib-uglify": "^3.3.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-exec": "^3.0.0",
+    "grunt-karma": "^2.0.0",
+    "jasmine": "^3.1.0",
+    "jasmine-core": "^3.1.0",
+    "karma": "^2.0.0",
+    "karma-jasmine": "^1.1.1",
+    "karma-phantomjs-launcher": "^1.0.4"
   },
   "scripts": {
-    "test": "./node_modules/karma/bin/karma start --single-run --browsers PhantomJS"
+    "test": "./node_modules/karma/bin/karma start --single-run --browsers PhantomJS",
+    "compile": "coffee --compile --output . src/",
+    "build": "npm run compile && grunt"
   }
 }
