[update] updates .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,17 @@
+sudo: false
+
 language: node_js
+
 node_js:
-  - 0.12.2
+- 9
+- lts/*
+- 8
+- 7
+
+before_install:
+  - npm install -g npm
+
+install:
+  - npm install
+
+script: npm run build
