--- a/package.json
+++ b/package.json
@@ -23,8 +23,21 @@
   "devDependencies": {
     "@parcel/packager-ts": "^2.0.0-rc.0",
     "@parcel/transformer-typescript-types": "^2.0.0-rc.0",
+    "@types/jest": "^27.0.2",
+    "jest": "^27.2.2",
     "parcel": "^2.0.0-rc.0",
+    "ts-jest": "^27.0.5",
     "typescript": "^4.4.3"
   },
-  "scripts": {}
+  "scripts": {},
+  "jest": {
+    "preset": "ts-jest",
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
+    "testMatch": [
+      "<rootDir>/src/**/*.(test|spec).(ts|tsx|js)"
+    ]
+  }
 }
