--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "types": "dist/date-diff.d.ts",
   "module": "dist/date-diff.module.js",
   "description": "DateDiff is a minimalized Javascript date arithmetic extension.",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "keywords": [
     "DateDiff",
     "Date diff",
@@ -22,6 +22,7 @@
   "license": "MIT",
   "devDependencies": {
     "@parcel/packager-ts": "^2.0.0-rc.0",
+    "@parcel/transformer-typescript-tsc": "^2.0.0-nightly.845",
     "@parcel/transformer-typescript-types": "^2.0.0-rc.0",
     "@types/jest": "^27.0.2",
     "jest": "^27.2.2",
@@ -30,7 +31,8 @@
     "typescript": "^4.4.3"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "parcel build"
   },
   "jest": {
     "preset": "ts-jest",
